--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <base href="./" />
   </head>
   <body>
-    <h1>Choose Your Own Adventure</h1>
-    <p>This is the beginning.</p>
+    <h1>My Interactive Design</h1>
+   
     <hr />
     <small>
       <a href="citations.html">Citations</a>
     </small>
   </body>
+  <script src="script.js"></script>
 </html>
